Exercício 2 corrigido e BFS adicionado

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,6 @@
         "--max-line-length",
         "119",
         "--experimental"
-    ]
+    ],
+    "python.analysis.typeCheckingMode": "off"
 }
